<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_below="@id/tv_app_name"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo_min" />

    <LinearLayout
        android:id="@+id/footer_pannel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/meroon"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="bottom" />

        <ImageView
            android:id="@+id/but_img_settings_search"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/acp_home" />

        <ImageView
            android:id="@+id/but_img_ssettings_ettings"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/acp_settings" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pannel_blank_rounded"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@id/footer_pannel"
        android:background="@color/meroon"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/bottom_rounded_corner_tv"
            android:text="Version: 1.0.12"
            android:textAlignment="center"
            android:textColor="@color/meroon"
            android:textSize="12sp"
            tools:text="Version: 1.0.12" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/pannel_blank_rounded"
        android:layout_below="@id/tv_label_wifi_info"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:text="@string/menu_name"
            android:textColor="@color/meroon"
            android:paddingStart="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1000"
                android:background="@android:color/transparent"
                android:gravity="fill_horizontal"
                android:hint="@string/menu_name"
                android:includeFontPadding="false"
                android:padding="10dp"
                android:paddingStart="20dp" />

            <ImageView
                android:id="@+id/but_setting_name"
                android:layout_width="40dp"
                android:layout_height="44dp"
                android:padding="10dp"
                android:src="@drawable/arrow_right" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:text="@string/menu_presence"
            android:textColor="@color/meroon"
            android:paddingStart="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_presence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1000"
                android:background="@android:color/transparent"
                android:gravity="fill_horizontal"
                android:hint="@string/menu_presence"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingStart="20dp" />

            <ImageView
                android:id="@+id/but_setting_presence"
                android:layout_width="40dp"
                android:layout_height="44dp"
                android:padding="10dp"
                android:src="@drawable/arrow_right" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:text="@string/menu_wifi"
            android:textColor="@color/meroon"
            android:paddingStart="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_ssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1000"
                android:background="@android:color/transparent"
                android:gravity="fill_horizontal"
                android:hint="@string/pop_swf_ssid"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingStart="20dp" />

            <ImageView
                android:id="@+id/but_setting_ssis"
                android:layout_width="40dp"
                android:layout_height="44dp"
                android:padding="10dp"
                android:src="@drawable/arrow_right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1000"
                android:background="@android:color/transparent"
                android:gravity="fill_horizontal"
                android:hint="@string/pop_swf_psw"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingStart="20dp" />

            <ImageView
                android:id="@+id/but_setting_psw"
                android:layout_width="40dp"
                android:layout_height="44dp"
                android:padding="10dp"
                android:src="@drawable/arrow_right" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:text="@string/menu_logout"
            android:textColor="@color/meroon"
            android:paddingStart="20dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_blank_space"
        android:fontFamily="@font/poppins_light"
        android:text="@string/inf_info3"
        android:textAlignment="center"
        android:textColor="@color/meroon"
        android:textSize="32dp" />

    <TextView
        android:id="@+id/tv_label_wifi_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_label_name"
        android:fontFamily="@font/poppins_light"
        android:textAlignment="center"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/poppins_light"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="34dp" />

    <TextView
        android:id="@+id/tv_blank_space"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/img_logo"
        android:textAlignment="center" />

</RelativeLayout>